force-app/main/default/objects/Survey__c/fields/Additional_Helpful_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Helpful_Information__c</fullName>
    <label>Additional Helpful Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>