force-app/main/default/objects/Survey__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>The Subject of the Case associated with this Survey</description>
    <label>Case Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>