force-app/main/default/objects/Survey__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <formula>VALUE(IF( FS_Confidence_Level__c = &quot;None&quot;,&quot;&quot;, TRIM( RIGHT( FS_Confidence_Level__c , 2) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confidence Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>