force-app/main/default/objects/Survey__c/fields/CS_makes_it_easy_to_get_answers__c.field-meta.xml
<CustomField>
    <fullName>CS_makes_it_easy_to_get_answers__c</fullName>
    <label>CS makes it easy to get answers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agree_Rating</valueSetName>
    </valueSet>
</CustomField>