force-app/main/default/objects/Survey__c/fields/Current_No_show_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_No_show_Rate__c</fullName>
    <label>Current No-show Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 2%</fullName>
            </value>
            <value>
                <fullName>2-5%</fullName>
            </value>
            <value>
                <fullName>6-8%</fullName>
            </value>
            <value>
                <fullName>9-11%</fullName>
            </value>
            <value>
                <fullName>12-14%</fullName>
            </value>
            <value>
                <fullName>15-17%</fullName>
            </value>
            <value>
                <fullName>18-20%</fullName>
            </value>
            <value>
                <fullName>More than 20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>