force-app/main/default/objects/Survey__c/fields/Current_Time_Spent_on_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Current_Time_Spent_on_Social_Media__c</fullName>
    <label>Current Time Spent on Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes-1 hour</fullName>
            </value>
            <value>
                <fullName>1-2 hours</fullName>
            </value>
            <value>
                <fullName>2-3 hours</fullName>
            </value>
            <value>
                <fullName>More than 3 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>