force-app/main/default/objects/Survey__c/fields/Easy_to_do_business_with_SR__c.field-meta.xml
<CustomField>
    <fullName>Easy_to_do_business_with_SR__c</fullName>
    <label>Easy to do business with SR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agree_Rating</valueSetName>
    </valueSet>
</CustomField>