force-app/main/default/objects/Survey__c/fields/EBR_Valuable__c.field-meta.xml
<CustomField>
    <fullName>EBR_Valuable__c</fullName>
    <label>EBR Valuable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Valuable</fullName>
            </value>
            <value>
                <fullName>Somewhat Not Valuable</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Valuable</fullName>
            </value>
            <value>
                <fullName>Extremely Valuable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>