force-app/main/default/objects/Survey__c/fields/FS_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>FS_Confidence_Level__c</fullName>
    <label>FS Confidence Level</label>
    <length>60</length>
    <type>Text</type>
</CustomField>