force-app/main/default/objects/Survey__c/fields/FS_Overall_Rep_Experience__c.field-meta.xml
<CustomField>
    <fullName>FS_Overall_Rep_Experience__c</fullName>
    <label>FS Overall Rep Experience</label>
    <length>80</length>
    <type>Text</type>
</CustomField>