force-app/main/default/objects/Survey__c/fields/FS_Resolved_in_Timely_Manner__c.field-meta.xml
<CustomField>
    <fullName>FS_Resolved_in_Timely_Manner__c</fullName>
    <label>FS Resolved in Timely Manner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>