force-app/main/default/objects/Survey__c/fields/FS_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Survey_ID__c</fullName>
    <description>The ID of the FluidSurvey survey</description>
    <label>FS Survey ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>