force-app/main/default/objects/Survey__c/fields/FS_Would_you_Recommend__c.field-meta.xml
<CustomField>
    <fullName>FS_Would_you_Recommend__c</fullName>
    <label>FS Would you Recommend</label>
    <length>80</length>
    <type>Text</type>
</CustomField>