force-app/main/default/objects/Survey__c/fields/How_can_we_improve__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_improve__c</fullName>
    <label>How can we improve</label>
    <length>15500</length>
    <type>LongTextArea</type>
</CustomField>