force-app/main/default/objects/Survey__c/fields/How_Many_Interactions__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Interactions__c</fullName>
    <inlineHelpText>About how many times did you interact with us before the issue was resolved?</inlineHelpText>
    <label>How Many Interactions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 time</fullName>
            </value>
            <value>
                <fullName>2 – 4 times</fullName>
            </value>
            <value>
                <fullName>5 – 7 times</fullName>
            </value>
            <value>
                <fullName>8+ times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>