force-app/main/default/objects/Survey__c/fields/Nature_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Issue__c</fullName>
    <inlineHelpText>What was the nature of your support issue?</inlineHelpText>
    <label>Nature of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training - needed to be taught/shown how to do something</fullName>
            </value>
            <value>
                <fullName>Technical - needed help with a technical problem or product malfunction</fullName>
            </value>
            <value>
                <fullName>Administrative - needed help with something you were not able to do yourself in the SR Platform (i.e., reset password, enable a feature in the platform, change billing information, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>