force-app/main/default/objects/Survey__c/fields/Not_Informative_Information__c.field-meta.xml
<CustomField>
    <fullName>Not_Informative_Information__c</fullName>
    <label>Not Informative Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>