force-app/main/default/objects/Survey__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>Used to calculate the net promoter score</description>
    <formula>IF( Would_you_Recommend_SR__c &gt;8,1, IF(Would_you_Recommend_SR__c &lt;7,-1,0))</formula>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>