force-app/main/default/objects/Survey__c/fields/of_Providers_in_practice__c.field-meta.xml
<CustomField>
    <fullName>of_Providers_in_practice__c</fullName>
    <label># of Providers in practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-30</fullName>
            </value>
            <value>
                <fullName>More than 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>