force-app/main/default/objects/Survey__c/fields/of_Reviews_Through_SR_per_Month__c.field-meta.xml
<CustomField>
    <fullName>of_Reviews_Through_SR_per_Month__c</fullName>
    <label># of Reviews Through SR per Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-15</fullName>
            </value>
            <value>
                <fullName>16-20</fullName>
            </value>
            <value>
                <fullName>More than 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>