force-app/main/default/objects/Survey__c/fields/Overall_Rep_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rep_Experience__c</fullName>
    <formula>VALUE(IF( FS_Overall_Rep_Experience__c = &quot;None&quot;,&quot;&quot;, TRIM( RIGHT(  FS_Overall_Rep_Experience__c  , 2) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How would you rate the overall experience provided to you by the Solutionreach representative who assisted you?</inlineHelpText>
    <label>Overall Rep Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>