force-app/main/default/objects/Survey__c/fields/Patients_seen_per_month__c.field-meta.xml
<CustomField>
    <fullName>Patients_seen_per_month__c</fullName>
    <label>Patients seen per month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1001-2500</fullName>
            </value>
            <value>
                <fullName>More than 2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>