force-app/main/default/objects/Survey__c/fields/Percent_of_Appointments_Scheduled_via_LL__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Appointments_Scheduled_via_LL__c</fullName>
    <label>Percent of Appointments Scheduled via LL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5%</fullName>
            </value>
            <value>
                <fullName>6-10%</fullName>
            </value>
            <value>
                <fullName>11-20%</fullName>
            </value>
            <value>
                <fullName>21-30%</fullName>
            </value>
            <value>
                <fullName>31-50%</fullName>
            </value>
            <value>
                <fullName>More than 50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>