force-app/main/default/objects/Survey__c/fields/Post_Case_Survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Case_Survey__c</fullName>
    <formula>CASE( RecordType.Name , 
					&quot;Post Case Survey&quot;, &quot;http://Solutionreach.Customer-Experience-Survey.sgizmo.com/s3/?surveyid=&quot;&amp;Id, 
					&quot;Playbook Case Survey&quot;, &quot;http://Solutionreach.Onboarding-Survey.sgizmo.com/s3/?surveyid=&quot;&amp;Id,
					&quot;EBR Case Survey&quot;, &quot;http://Solutionreach.EBR-Survey.sgizmo.com/s3/?surveyid=&quot;&amp;Id,
					&quot;http://Solutionreach.Customer-Experience-Survey.sgizmo.com/s3/?surveyid=&quot;&amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>