force-app/main/default/objects/Survey__c/fields/Prior_to_SR_time_spent_on_reminders__c.field-meta.xml
<CustomField>
    <fullName>Prior_to_SR_time_spent_on_reminders__c</fullName>
    <label>Prior to SR, time spent on reminders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes-1 hour</fullName>
            </value>
            <value>
                <fullName>1-2 hours</fullName>
            </value>
            <value>
                <fullName>2-3 hours</fullName>
            </value>
            <value>
                <fullName>More than 3 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>