force-app/main/default/objects/Survey__c/fields/Product_does_what_is_expected__c.field-meta.xml
<CustomField>
    <fullName>Product_does_what_is_expected__c</fullName>
    <label>Product does what is expected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agree_Rating</valueSetName>
    </valueSet>
</CustomField>