force-app/main/default/objects/Survey__c/fields/Product_that_most_influenced_decision__c.field-meta.xml
<CustomField>
    <fullName>Product_that_most_influenced_decision__c</fullName>
    <description>Which of the following most influenced your decision to subscribe to Solutionreach?</description>
    <label>Product that most influenced decision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>