force-app/main/default/objects/Survey__c/fields/Rank_of_Surveys_and_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Rank_of_Surveys_and_Reviews__c</fullName>
    <label>Rank of Surveys and Reviews</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>