force-app/main/default/objects/Survey__c/fields/Recall_Revenue_Added_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Recall_Revenue_Added_per_Month__c</fullName>
    <label>Recall Revenue Added per Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $1,000</fullName>
            </value>
            <value>
                <fullName>$1,000-$2,500</fullName>
            </value>
            <value>
                <fullName>$2,500-$5,000</fullName>
            </value>
            <value>
                <fullName>$5,000-$10,000</fullName>
            </value>
            <value>
                <fullName>$10,000-$25,000</fullName>
            </value>
            <value>
                <fullName>More than $25,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>