force-app/main/default/objects/Survey__c/fields/Resolved_in_Timely_Manner__c.field-meta.xml
<CustomField>
    <fullName>Resolved_in_Timely_Manner__c</fullName>
    <formula>VALUE(IF( FS_Resolved_in_Timely_Manner__c = &quot;None&quot;,&quot;&quot;, TRIM( RIGHT(  FS_Resolved_in_Timely_Manner__c  , 2) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Was your issue resolved in a timely manner?</inlineHelpText>
    <label>Resolved in Timely Manner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>