force-app/main/default/objects/Survey__c/fields/Resolved_to_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Resolved_to_Satisfaction__c</fullName>
    <label>FS Resolved to Satisfaction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>