force-app/main/default/objects/Survey__c/fields/Responsible_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Decision__c</fullName>
    <inlineHelpText>Is this the person who made the decision?</inlineHelpText>
    <label>Responsible for Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>