force-app/main/default/objects/Survey__c/fields/Role_in_Office__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Office__c</fullName>
    <label>Role in Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>