force-app/main/default/objects/Survey__c/fields/Satisfaction_with_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Surveys__c</fullName>
    <label>Satisfaction with Surveys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfaction_Rating</valueSetName>
    </valueSet>
</CustomField>