force-app/main/default/objects/Survey__c/fields/SR_product_important_to_success__c.field-meta.xml
<CustomField>
    <fullName>SR_product_important_to_success__c</fullName>
    <label>SR product important to success</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agree_Rating</valueSetName>
    </valueSet>
</CustomField>