force-app/main/default/objects/Survey__c/fields/Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment__c</fullName>
    <inlineHelpText>Team that the rep was on when closing the case</inlineHelpText>
    <label>Team Assignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>